--- a/style.css
+++ b/style.css
@@ -29,13 +29,21 @@
   border-radius: 10px;
   max-width: 600px;
   width: 100%;
+  height: 50%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .base__imagem {
     width: 250px;
     height: 250px;
-    object-fit: cover; /* garante que a imagem se encaixe */
+    overflow: hidden;
+    margin-top: 160px;
+    object-fit: cover;
+    transition: opacity 0.3s ease;
+}
+
+.base__imagem.ativa {
+  opacity: 1;
 }
 
 .base__acoes-container {
